--- a/site.yml
+++ b/site.yml
@@ -1,3 +1,9 @@
+- name: Cat localhost
+  hosts: localhost
+  tasks:
+    - name: Print inventory file
+      ansible.builtin.debug:
+        msg: "the value of foo.txt is {{ lookup('ansible.builtin.file', '/runner/inventory/hosts') }}"
 - name: Test
   hosts: web
   tasks:
